--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,20 @@
-Beaker==1.8.1
+asn1crypto==0.24.0
 certifi==2018.1.18
+cffi==1.11.4
 chardet==3.0.4
+cryptography==2.1.4
+enum34==1.1.6
 future==0.16.0
 idna==2.6
-Mako==1.0.7
-MarkupSafe==1.0
+ipaddress==1.0.19
 oauthlib==2.0.6
-pbr==3.1.1
+pycparser==2.18
+pyOpenSSL==17.5.0
+pysolr==3.7.0
+python-dateutil==2.6.1
 python-twitter==3.3
 requests==2.18.4
 requests-oauthlib==0.8.0
 six==1.11.0
-stevedore==1.28.0
 urllib3==1.22
-virtualenv==15.1.0
-virtualenv-clone==0.2.6
-virtualenvwrapper==4.8.2
+watson-developer-cloud==1.0.2
