--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,16 @@ asn1crypto==0.24.0
 certifi==2018.1.18
 cffi==1.11.4
 chardet==3.0.4
+click==6.7
 cryptography==2.1.4
 enum34==1.1.6
+Flask==0.12.2
 future==0.16.0
 idna==2.6
 ipaddress==1.0.19
+itsdangerous==0.24
+Jinja2==2.10
+MarkupSafe==1.0
 oauthlib==2.0.6
 pycparser==2.18
 pyOpenSSL==17.5.0
@@ -18,3 +23,4 @@ requests-oauthlib==0.8.0
 six==1.11.0
 urllib3==1.22
 watson-developer-cloud==1.0.2
+Werkzeug==0.14.1
